# ga4gh-schema

./: 404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
Activity/: index.html
Activity_activityType/: index.html
Activity_endDate/: index.html
Activity_hadInput/: index.html
Activity_hadOutput/: index.html
Activity_hasPart/: index.html
Activity_partOf/: index.html
Activity_performedBy/: index.html
Activity_startDate/: index.html
Activity_wasSpecifiedBy/: index.html
Affiliation/: index.html
Affiliation_affiliationStatus/: index.html
Affiliation_endDate/: index.html
Affiliation_member/: index.html
Affiliation_organization/: index.html
Affiliation_organizationalRole/: index.html
Affiliation_startDate/: index.html
Agent/: index.html
Agent_agentType/: index.html
Agent_childOrganization/: index.html
Agent_hasAffiliation/: index.html
Agent_parentOrganization/: index.html
Agent_softwareVersion/: index.html
Boolean/: index.html
Class/: index.html
Code/: index.html
Coding/: index.html
Coding_code/: index.html
Coding_label/: index.html
Coding_system/: index.html
Coding_systemURL/: index.html
Coding_systemVersion/: index.html
Contribution/: index.html
Contribution_contributionMadeBy/: index.html
Contribution_contributionMadeTo/: index.html
Contribution_contributorRole/: index.html
Contribution_organizationalContext/: index.html
DataItem/: index.html
DataItem_componentDataItem/: index.html
DataItem_confidenceInterval/: index.html
(+472 files in other folders)
