[tool.poetry]
name = "ga4gh-schema"
version = "0.1.0"
description = "data model for GA4GH variant annotation"
authors = [
    "Matthew Brush <matt@tislab.org>",
    "Sujay Patil <spatil@lbl.gov>"
]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.2.8"
schemasheets = "^0.1.10"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
